# segment-play

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: background.py  input.py  scenario_director.py  settings.py
src/example/: basic_hide.py  basic_pose.py  camera_test.py  static_box.py
src/frame/: camera.py  producer.py  shared.py
src/ocsort/: association.py  kalmanfilter.py  ocsort.py  onnx_inference.py  preprocess.py  timer.py  utils.py
src/pipeline/: data.py  manager.py  producer.py  stats.py
src/pose/: pose.py  producer.py
src/segmentation/: base.py  mobile_sam.py  producer.py  sam.py
src/tracking/: producer.py  tracking.py
src/util/: controller.py  image.py  mask.py  visualize.py
tests/: .coveragerc  conftest.py
tests/frame/: test_camera.py
tests/performance/: measure_mask_times.py
tests/util/: test_image.py  test_mask.py
